# Quartz

./: .clang-format  .cmake-format.py  .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  readme.md  todo.md  uncrustify.cfg
.github/: pull_request_template.md
.github/workflows/: linux_uts.yml
cmake/: ApplicationVersion.cmake  CompileJolt.cmake  CompileShader.cmake  CreateScratchExecutable.cmake  CreateUnitTest.cmake  CustomPedanticFlags.cmake  QuartzVersion.cmake
demo_app/demo_app/: Boilerplate.cpp  Boilerplate.hpp  CMakeLists.txt  Loggers.hpp  SceneParameters.cpp  SceneParameters.hpp  main.cpp  reference_test.cpp
demo_app/demo_app/player/: Player.cpp  Player.hpp  PlayerMovement.cpp  PlayerMovement.hpp
demo_app/jolt_testing/: CMakeLists.txt  Loggers.hpp  core.hpp  jolt_main.cpp
docs/contributing/: contribution_guidelines.md  readme.md
docs/physics/: readme.md
docs/scening/: readme.md
include/quartz/: core.hpp
include/util/: platform.hpp
src/math/: Loggers.hpp
src/math/algorithms/: Algorithms.cpp  Algorithms.hpp  CMakeLists.txt
src/math/transform/: CMakeLists.txt  Mat3.cpp  Mat3.hpp  Mat4.cpp  Mat4.hpp  Quaternion.cpp  Quaternion.hpp  Transform.cpp  Transform.hpp  Vec2.cpp  Vec2.hpp  Vec3.cpp  Vec3.hpp  Vec4.cpp  Vec4.hpp
src/quartz/: Loggers.hpp  core.hpp
src/quartz/application/: Application.cpp  Application.hpp  CMakeLists.txt
src/quartz/application2/: Application2.cpp  Application2.hpp  CMakeLists.txt
src/quartz/managers/input_manager/: CMakeLists.txt  InputManager.cpp  InputManager.hpp
src/quartz/managers/physics_manager/: CMakeLists.txt  PhysicsManager.cpp  PhysicsManager.hpp
src/quartz/managers/scene_manager/: CMakeLists.txt  SceneManager.cpp  SceneManager.hpp
src/quartz/physics/collider/: BoxCollider.cpp  BoxCollider.hpp  BoxShape.cpp  BoxShape.hpp  CMakeLists.txt  Collider.cpp  Collider.hpp  SphereCollider.cpp  SphereCollider.hpp  SphereShape.cpp  SphereShape.hpp
src/quartz/physics/field/: CMakeLists.txt  Field.cpp  Field.hpp
src/quartz/physics/realm/: CMakeLists.txt  Realm.cpp  Realm.hpp
src/quartz/physics/rigid_body/: CMakeLists.txt  RigidBody.cpp  RigidBody.hpp
src/quartz/rendering/buffer/: Buffer.cpp  Buffer.hpp  BufferHelper.cpp  BufferHelper.hpp  BufferUtil.cpp  BufferUtil.hpp  CMakeLists.txt  DepthBuffer.cpp  DepthBuffer.hpp  ImageBuffer.cpp  ImageBuffer.hpp  LocallyMappedBuffer.cpp  LocallyMappedBuffer.hpp  StagedBuffer.cpp  StagedBuffer.hpp  StagedImageBuffer.cpp  StagedImageBuffer.hpp
src/quartz/rendering/context/: Buffer.cpp  Buffer.hpp  CMakeLists.txt  Context.cpp  Context.hpp  Device.cpp  Device.hpp  Instance.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  Model.hpp  Pipeline.cpp  Pipeline.hpp  Swapchain.cpp  Swapchain.hpp  Texture.cpp  Texture.hpp  Vertex.cpp  Vertex.hpp  Window.cpp  Window.hpp  Window2.cpp  Window2.hpp
src/quartz/rendering/cube_map/: CMakeLists.txt  CubeMap.cpp  CubeMap.hpp
src/quartz/rendering/depth_buffer/: CMakeLists.txt  DepthBuffer.cpp  DepthBuffer.hpp
src/quartz/rendering/device/: CMakeLists.txt  Device.cpp  Device.hpp
src/quartz/rendering/instance/: CMakeLists.txt  Instance.cpp  Instance.hpp
src/quartz/rendering/material/: CMakeLists.txt  Material.cpp  Material.hpp
src/quartz/rendering/mesh/: CMakeLists.txt  Mesh.cpp  Mesh.hpp  Primitive.cpp  Primitive.hpp  Vertex.cpp  Vertex.hpp
src/quartz/something/: CMakeLists.txt  Something.cpp  Something.hpp
src/util/: Loggers.hpp  macros.hpp  platform.hpp
src/util/errors/: AssetErrors.cpp  AssetErrors.hpp  CMakeLists.txt  RichException.cpp  RichException.hpp  VulkanErrors.cpp  VulkanErrors.hpp
src/util/file_system/: CMakeLists.txt  FileSystem.cpp  FileSystem.hpp
src/util/logger/: CMakeLists.txt  Logger.cpp  Logger.hpp
src/util/source_location/: CMakeLists.txt  SourceLocation.cpp  SourceLocation.hpp
src/util/unit_test/: CMakeLists.txt  UnitTest.cpp  UnitTest.hpp
style/cmake-format/: .cmake-format.py
style/uncrustify/: class_header_template.hpp  file_header_template.hpp  function_header_template.hpp
test/scratch/: CMakeLists.txt  QuaternionEulerAngleExploration.cpp  RichExceptionExample.cpp  RichExceptionTest.cpp  StridePlayground.cpp  SuccessiveWindows.cpp
test/unit/: CMakeLists.txt  Util.hpp
test/unit/example/: CMakeLists.txt  test_example_simple.cpp  test_example_simple_passing.cpp
test/unit/math/algorithms/: CMakeLists.txt  test_Algorithms.cpp
test/unit/math/transform/: CMakeLists.txt  test_Mat4.cpp  test_Quaternion.cpp  test_Transform.cpp  test_Vec2.cpp  test_Vec3.cpp  test_Vec4.cpp
test/unit/quartz/application/: CMakeLists.txt  test_Application.cpp
test/unit/quartz/physics/collider/: CMakeLists.txt  test_BoxShape.cpp  test_Collider.cpp  test_SphereShape.cpp
test/unit/quartz/physics/field/: CMakeLists.txt  test_Field.cpp
test/unit/quartz/physics/rigid_body/: CMakeLists.txt  test_RigidBody_Collider.cpp
test/unit/quartz/rendering/buffer/: CMakeLists.txt  test_LocallyMappedBuffer.cpp
test/unit/quartz/rendering/material/: CMakeLists.txt  test_Material.cpp
test/unit/quartz/rendering/pipeline/: CMakeLists.txt  test_UniformBufferInfo.cpp
test/unit/quartz/scene/camera/: CMakeLists.txt  test_Camera.cpp
test/unit/quartz/scene/doodad/: CMakeLists.txt  test_Doodad.cpp
test/unit/quartz/scene/light/: CMakeLists.txt  test_Light.cpp
test/unit/quartz/scene/scene/: CMakeLists.txt  test_Scene.cpp
test/unit/quartz/scene/sky_box/: CMakeLists.txt  test_SkyBox.cpp
test/unit/util/file_system/: CMakeLists.txt  test_FileSystem.cpp
test/unit/util/logger/: CMakeLists.txt  test_Logger.cpp
test/unit_test/: CMakeLists.txt  Util.cpp  Util.hpp
test/unit_test/math/: test_math_transform_quaternion.cpp
test/unit_test/math/transform/: CMakeLists.txt  test_math_transform_normalize.cpp  test_math_transform_quaternion.cpp  test_math_transform_vec3.cpp
test/unit_test/quartz/physics/rigid_body/: CMakeLists.txt  test_rigidbody_collider_pointers.cpp
test/unit_test/quartz/scene/doodad/: CMakeLists.txt  test_doodad_rigidbody_collider_transforms.cpp
test/unit_test/util/general/: CMakeLists.txt  test_unit_test_util.cpp
(+87 files in other folders)
