#====================================================================
# Example unit tests
#====================================================================

# add_subdirectory("example")

#====================================================================
# Math unit tests
#====================================================================

add_subdirectory("math/algorithms")
add_subdirectory("math/transform")

#====================================================================
# Util unit tests
#====================================================================

add_subdirectory("util/file_system")

